src/test/deca/syntax/invalid/esc_lex_02.deca
// Description:
//    tests de programme incorrect lexicalement
//
// Resultats:
//    Ligne 10: Erreur, caractère de formatage non existant
//
// Historique:
//    cree le 03/01/2023

"ceci est incorrect \z"